--- a/src/components/Main/MainContent.css
+++ b/src/components/Main/MainContent.css
@@ -34,6 +34,7 @@
   display: inline-block;; 
   width: 552px;
   height: 850px;
+  margin-top:0px;
 }
 
 .IndicatorContainer {
@@ -47,7 +48,7 @@
 
 .TimePeriodsContainer{
   clear: auto;
-  margin-top: 60px;
+  margin-top: 65px;
 }
 
 .SingleScenario{
@@ -108,7 +109,7 @@ ul.dropdown-menu {
 
 .TimeScenarios h4{
   margin-bottom: 23px;
-  margin-top:23px;
+  margin-top:30px;
 }
 
 .Chart h3{
@@ -117,16 +118,36 @@ ul.dropdown-menu {
 
 .TypeContainer{
 
-  width:250px;
-  margin-left: 330px;
-}
-.nav-pills active{
+  position: absolute; 
+  top:730px;
+  left:380px;
+  right:0;
+  width: 200px;
 
-  background: #1D8519 !important;
+}
+
+.nav-pills li {
+  margin-top: 5px;
+  background-color: #3ea834 !important;
+  border-radius: 5px;
+  margin-right: 5px;
+}
+
+.nav-pills li a {
+  font-weight: bold !important;
+  color: #000000;
+}
+.nav-pills > .active > a, .nav-pills > .active > a:hover {
+  background-color: rgb(40, 134, 66)!important;
+}
+
+.nav-pills li a:hover {
+  background-color: rgb(86, 190, 121) !important;
+  color: #000000;
 }
 
 .TimeScenarios{
-  margin-top: 90px;
+  margin-top: 120px;
 }
 
 .SingleItemDefault{
@@ -169,9 +190,7 @@ ul.dropdown-menu {
   }
 
   .Graph{
-
     margin-top: 20px;
-
   }
 
 
